--- a/auot_fill.ipynb
+++ b/auot_fill.ipynb
@@ -98,7 +98,7 @@
    ],
    "source": [
     "# 读取账户数据\n",
-    "file_path = \"",
+    "file_path = \"\",
     "main = pd.read_excel(file_path, sheet_name = 0, header = 0, index_col = 0, na_values = 0)\n",
     "sgd = pd.read_excel(file_path, sheet_name = 1, header = 0, index_col = 0, na_values = 0)\n",
     "cny = pd.read_excel(file_path, sheet_name = 2, header = 0, index_col = 0, na_values = 0)\n",
