--- a/auot_fill.ipynb
+++ b/auot_fill.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cce3fd2d-f6d0-4500-b85d-32b1169f712b",
    "metadata": {},
    "outputs": [],
@@ -36,69 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bca83075-111c-4b2a-8850-b2677b1e30a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "今天是 09/18 ,昨天是 09/17\n",
-      "今天是这个月的第 18 天,周三\n",
-      "*****************************************\n",
-      "上月数据:\n",
-      "消费      -1976.936000\n",
-      "平均消费      -65.897867\n",
-      "结余        176.894000\n",
-      "平均结余        5.896467\n",
-      "总计     -95852.106000\n",
-      "平均      -3195.070200\n",
-      "Name: 八月, dtype: float64\n",
-      "*****************************************\n",
-      "昨天新加坡元账户数据:\n",
-      "交通     -4.82\n",
-      "伙食       NaN\n",
-      "娱乐    -12.00\n",
-      "日用       NaN\n",
-      "工资       NaN\n",
-      "投资       NaN\n",
-      "房租       NaN\n",
-      "学费       NaN\n",
-      "日消费   -16.82\n",
-      "日结余   -16.82\n",
-      "周消费      NaN\n",
-      "周结余      NaN\n",
-      "月消费      NaN\n",
-      "月结余      NaN\n",
-      "月总计      NaN\n",
-      "Name: 09/17, dtype: float64\n",
-      "*****************************************\n",
-      "昨天人民币账户数据:\n",
-      "交通     NaN\n",
-      "伙食     NaN\n",
-      "娱乐     NaN\n",
-      "日用     NaN\n",
-      "工资     NaN\n",
-      "投资     8.0\n",
-      "房租     NaN\n",
-      "学费     NaN\n",
-      "日消费    NaN\n",
-      "日结余    8.0\n",
-      "周消费    NaN\n",
-      "周结余    NaN\n",
-      "月消费    NaN\n",
-      "月结余    NaN\n",
-      "月总计    NaN\n",
-      "Name: 09/17, dtype: float64\n",
-      "*****************************************\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 读取账户数据\n",
-    "file_path = \"\",
+    "file_path = \"\"\n",
     "main = pd.read_excel(file_path, sheet_name = 0, header = 0, index_col = 0, na_values = 0)\n",
     "sgd = pd.read_excel(file_path, sheet_name = 1, header = 0, index_col = 0, na_values = 0)\n",
     "cny = pd.read_excel(file_path, sheet_name = 2, header = 0, index_col = 0, na_values = 0)\n",
@@ -148,267 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "24deb78e-ee7a-49b4-a235-929f688a5e7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 交通 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 -1.49\n",
-      "请输入明细数据 -1.3\n",
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 交通 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 伙食 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 -3.8\n",
-      "请输入明细数据 -5.8\n",
-      "请输入明细数据 -6.2\n",
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 伙食 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 娱乐 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 娱乐 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 日用 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 日用 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 工资 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 工资 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 投资 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 投资 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0.03\n",
-      "请输入明细数据 1.11\n",
-      "请输入明细数据 7.05\n",
-      "请输入明细数据 0.72\n",
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 房租 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 房租 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入新加坡元 学费 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "请输入人民币 学费 数据\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输入明细数据 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 统计今日分类数据\n",
     "def count():\n",
@@ -489,59 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "95f2a67f-23e1-4ab8-b9e6-f487c4b7e035",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****************************************\n",
-      "本月数据:\n",
-      "消费     -923.4465\n",
-      "平均消费    -51.3000\n",
-      "结余     -631.8420\n",
-      "平均结余    -35.1000\n",
-      "总计     -631.8420\n",
-      "平均      -35.1000\n",
-      "Name: 九月, dtype: float64\n",
-      "*****************************************\n",
-      "本周新加坡元账户数据:\n",
-      "周消费   -42.0\n",
-      "周结余   -37.0\n",
-      "Name: 09/16, dtype: float64\n",
-      "*****************************************\n",
-      "本周人民币账户数据:\n",
-      "周消费      NaN\n",
-      "周结余    25.03\n",
-      "Name: 09/16, dtype: float64\n",
-      "*****************************************\n",
-      "今日新加坡元账户数据:\n",
-      "交通    -2.79\n",
-      "伙食   -15.80\n",
-      "娱乐      NaN\n",
-      "日用      NaN\n",
-      "工资      NaN\n",
-      "投资      NaN\n",
-      "房租      NaN\n",
-      "学费      NaN\n",
-      "Name: 09/18, dtype: float64\n",
-      "*****************************************\n",
-      "今天人民币账户数据:\n",
-      "交通     NaN\n",
-      "伙食     NaN\n",
-      "娱乐     NaN\n",
-      "日用     NaN\n",
-      "工资     NaN\n",
-      "投资    8.91\n",
-      "房租     NaN\n",
-      "学费     NaN\n",
-      "Name: 09/18, dtype: float64\n",
-      "*****************************************\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 展示数据切片\n",
     "print(\"*****************************************\")\n",
